--- a/backend/package.json
+++ b/backend/package.json
@@ -17,23 +17,24 @@
     "cors": "^2.8.5",
     "esm": "^3.2.25",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^2.0.6",
     "supertest": "^6.0.0",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.1",
+    "@tailwindcss/postcss": "^4.1.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-jest": "^26.6.1",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^8.1.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-preset-env": "^0.0.0",
     "eslint": "^7.12.1",
     "eslint-config-standard": "^16.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "jest": "^26.6.0"
+    "jest": "^29.7.0"
   }
 }
