--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.0",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
