--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "cypress-file-upload": "^5.0.8",
     "eslint": "^9.9.0",
+    "eslint-plugin-cypress": "^4.2.1",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
